[package]
name = "openpaw"
version = "3.0.0"
edition = "2024"
description = "Autonomous AI agent with onchain social identity — Tapestry, Moltbook, Bankr, Helius"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
